(App.css) change cardbox's minheight from 1000px to  min-content- fixes spacing issues

--- a/custome/src/App.css
+++ b/custome/src/App.css
@@ -119,7 +119,7 @@ a:hover {
 .cardBox {
   display: flex;
   flex: 1;
-  min-height: 1000px;
+  min-height: min-content;
   flex-wrap: wrap;
   background: #ddd;
   justify-content: center;
